--- a/components/Checkbox/Checkbox.module.scss
+++ b/components/Checkbox/Checkbox.module.scss
@@ -1,11 +1,13 @@
 .checkedTitle {
   padding-left: 10px;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .uncheckedTitle {
   padding-right: 10px;
   font-size: 14px;
+  cursor: pointer;
 }
 
 .checkbox {
