--- a/styles/_display.scss
+++ b/styles/_display.scss
@@ -11,7 +11,7 @@
 }
 
 .justify-content-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 
 .justify-content-center {
