--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -2,6 +2,8 @@
   //COLORS
   --background-color: #191921;
   --text-color: #d0d0dd;
+  --primary-color: #282832;
+  --secondary-color: #04c800;
 
   //SPACING
   --spacing--10: 10px;
