--- a/styles/_display.scss
+++ b/styles/_display.scss
@@ -22,6 +22,10 @@
   justify-content: flex-end;
 }
 
+.align-items-start {
+  align-items: flex-start;
+}
+
 .align-items-center {
   align-items: center;
 }
@@ -30,16 +34,20 @@
   align-items: flex-end;
 }
 
-.align-items-start {
-  align-items: flex-start;
-}
-
 .align-self-start {
   align-self: flex-start;
 }
 
+.align-self-end {
+  align-self: flex-end;
+}
+
 .flex-column {
   flex-direction: column;
+}
+
+.flex-column-reverse {
+  flex-direction: column-reverse;
 }
 
 .flex-auto {
