--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -4,6 +4,7 @@
   --text-color: #d0d0dd;
   --primary-color: #282832;
   --secondary-color: #04c800;
+  --grey-light-color: #3e3f4a;
 
   //SPACING
   --spacing--10: 10px;
