Добавил компонент ProfilePopup #9

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -2,6 +2,7 @@
   //COLORS
   --background-color: #191921;
   --text-color: #d0d0dd;
+  --text-color-dark: #9c9caa;
   --primary-color: #282832;
   --secondary-color: #04c800;
   --grey-light-color: #3e3f4a;
