--- a/components/ProfilePopup/ProfilePopup.module.scss
+++ b/components/ProfilePopup/ProfilePopup.module.scss
@@ -3,7 +3,6 @@
     background: var(--grey-light-color);
     color: var(--text-color);
     border-radius: 4px;
-    padding: 10px 15px;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.08);
     margin-top: 10px;
     overflow-x: visible;
@@ -18,5 +17,36 @@
     border-bottom: 8px solid var(--grey-light-color);
     border-right: 7px solid transparent;
     border-left: 7px solid transparent;
+  }
+
+  .section1 {
+    padding: 20px 20px 15px 20px;
+  }
+
+  .section2 {
+    padding: 15px 20px;
+  }
+
+  .divider {
+    background-color: #474758;
+  }
+
+  .avatar {
+    width: 38px;
+    height: 38px;
+    margin-right: 10px;
+  }
+
+  .name {
+    font-style: normal;
+    font-weight: bold;
+    line-height: 18px;
+  }
+
+  .login {
+    color: var(--text-color-dark);
+    font-style: normal;
+    font-weight: normal;
+    line-height: 18px;
   }
 }
