fix: comments and views

--- a/components/LikeBlock/LikeBlock.module.scss
+++ b/components/LikeBlock/LikeBlock.module.scss
@@ -1,4 +1,4 @@
-$text-color: #9c9caa;
+$text-color: var(--secondary-text-color);
 $like-color: var(--secondary-color);
 $dislike-color: var(--tertiary-color);
 
