--- a/components/LikeBlock/LikeBlock.module.scss
+++ b/components/LikeBlock/LikeBlock.module.scss
@@ -1,4 +1,4 @@
-$text-color: var(--secondary-text-color);
+$text-color: var(--text-dark-color);
 $like-color: var(--secondary-color);
 $dislike-color: var(--tertiary-color);
 
