fix: font-size: 13px;

--- a/components/ViewsAndComments/ViewsAndComments.module.scss
+++ b/components/ViewsAndComments/ViewsAndComments.module.scss
@@ -2,6 +2,7 @@
   .count {
     margin-left: 6px;
     color: var(--text-dark-color);
+    font-size: 13px;
   }
   .icon:last-of-type {
     margin-left: 15px;
