--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -7,6 +7,7 @@
   --secondary-color: #04c800;
   --grey-light-color: #3e3f4a;
   --tertiary-color: #ff9900;
+  --border-color: #3a3a4b;
 
   //SPACING
   --spacing--10: 10px;
