--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -45,3 +45,24 @@ li {
   color: red;
   margin-top: 5px;
 }
+
+.left-side {
+  width: 240px;
+  margin-left: 10%;
+}
+
+.right-side {
+  width: 320px;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.content {
+  flex: 1;
+  margin-left: 30px;
+  margin-right: 30px;
+}
