--- a/components/MiniPost/MiniPost.module.scss
+++ b/components/MiniPost/MiniPost.module.scss
@@ -1,6 +1,3 @@
-$base-font: var(--font--family--base);
-$text-color: var(--text-color);
-$primary-color: var(--primary-color);
 $secondary-color: #9c9caa;
 
 @mixin animatedLink {
@@ -29,7 +26,7 @@ $secondary-color: #9c9caa;
 .post {
   width: 650px;
   max-height: 600px;
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   border-radius: 4px;
   border: 1px solid #3a3a4b;
   padding: 20px 25px;
