--- a/components/MiniPost/MiniPost.module.scss
+++ b/components/MiniPost/MiniPost.module.scss
@@ -1,5 +1,3 @@
-$secondary-color: #9c9caa;
-
 @mixin animatedLink {
   cursor: pointer;
   &:hover {
@@ -17,20 +15,20 @@ $secondary-color: #9c9caa;
     content: '';
     width: 2px;
     height: 2px;
-    background-color: $secondary-color;
+    background-color: var(--text-dark-color);
     border-radius: 50%;
     left: 10px;
   }
 }
 
 .post {
-  width: 650px;
+  width: 100%;
+  max-width: 950px;
   max-height: 600px;
   background-color: var(--primary-color);
-  border-radius: 4px;
-  border: 1px solid #3a3a4b;
-  padding: 20px 25px;
-  margin-bottom: 15px;
+  border-radius: 6px;
+  padding: 30px;
+  margin-bottom: 30px;
   &:last-child {
     margin-bottom: unset;
   }
@@ -66,7 +64,7 @@ $secondary-color: #9c9caa;
 }
 
 .time {
-  color: $secondary-color;
+  color: var(--text-dark-color);
 }
 
 .tag {
@@ -90,10 +88,11 @@ $secondary-color: #9c9caa;
 }
 
 .description {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 22px;
   margin: 0;
   margin-bottom: 17px;
+  font-family: 'IBM Plex Serif', serif !important;
 }
 
 .popularity {
@@ -112,7 +111,7 @@ $secondary-color: #9c9caa;
   &_count {
     font-size: 13px;
     margin-left: 5px;
-    color: $secondary-color;
+    color: var(--text-dark-color);
     line-height: 17px;
   }
 }
