--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -62,6 +62,9 @@ li {
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex: 1;
   margin-left: 30px;
   margin-right: 30px;
