--- a/components/FullPost/Post.module.scss
+++ b/components/FullPost/Post.module.scss
@@ -78,6 +78,26 @@
   }
 }
 
+.unknown {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: var(--text-dark-color);
+  height: 100px;
+  border-radius: 4px;
+  &_title {
+    color: var(--primary-color);
+    font-size: 20px;
+    margin: 0;
+  }
+  &_description {
+    color: var(--primary-color);
+    font-size: 14px;
+  }
+}
+
 @keyframes image-preloader-spin {
   0% {
     transform: rotate(0deg);
