--- a/components/FullPost/Post.module.scss
+++ b/components/FullPost/Post.module.scss
@@ -1,8 +1,82 @@
 .post {
   width: 100%;
-  max-width: 650px;
+  max-width: 950px;
   height: 100%;
-  padding-bottom: 200px;
+  padding: 30px;
+  margin-bottom: 200px;
+  background-color: var(--primary-color);
+  border-radius: 4px;
+  &_info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 18px;
+  }
+  &_header {
+    margin: 0;
+    margin-bottom: 25px;
+    font-size: 42px;
+    line-height: 44px;
+    color: var(--text-color);
+  }
+  &_share {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    color: var(--text-dark-color);
+    font-size: 14px;
+    cursor: pointer;
+    &:hover {
+      color: var(--text-color);
+    }
+    &_icon {
+      margin-right: 6px;
+    }
+    &_popup {
+      background-color: var(--grey-light-color) !important;
+      border-radius: 4px;
+      margin-top: 10px;
+      overflow: visible !important;
+      &::before {
+        content: '';
+        position: absolute;
+        top: -8px;
+        right: 45%;
+        border-bottom: 8px solid var(--grey-light-color);
+        border-right: 7px solid transparent;
+        border-left: 7px solid transparent;
+      }
+    }
+    &_social {
+      display: flex;
+      align-items: center;
+      padding: 5px 20px;
+      color: var(--text-dark-color);
+      font-size: 14px;
+      cursor: pointer;
+      &:hover {
+        color: var(--text-color);
+      }
+      &:first-child {
+        padding-top: 15px;
+      }
+      &:last-child {
+        padding-bottom: 15px;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        top: -8px;
+        right: 45%;
+        border-bottom: 8px solid var(--grey-light-color);
+        border-right: 7px solid transparent;
+        border-left: 7px solid transparent;
+      }
+      &_icon {
+        width: 30px;
+        margin-right: 10px;
+      }
+    }
+  }
 }
 
 .header {
