--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -49,6 +49,10 @@ li {
 .left-side {
   width: 240px;
   margin-left: 10%;
+  &-no-margin {
+    width: 240px;
+    margin: 0;
+  }
 }
 
 .right-side {
@@ -59,6 +63,10 @@ li {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+  &-center {
+    display: flex;
+    margin: 30px 105px 0;
+  }
 }
 
 .content {
