Добавлен футер в нижней части поста

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -18,4 +18,7 @@
 
   --font--family--base: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, Roboto, Segoe UI, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  --font--family--serif: 'IBM Plex Serif', -apple-system, BlinkMacSystemFont, Roboto, Segoe UI, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
 }
