--- a/components/FullPost/Post.module.scss
+++ b/components/FullPost/Post.module.scss
@@ -74,6 +74,34 @@
       &_icon {
         width: 30px;
         margin-right: 10px;
+        fill: var(--text-dark-color);
+      }
+    }
+  }
+  &_footer {
+    display: flex;
+    margin-top: 30px;
+    &_icons {
+      margin-right: 30px;
+    }
+    &_icon {
+      margin-right: 20px;
+      cursor: pointer;
+      fill: var(--text-dark-color);
+      &_hover {
+        fill: var(--text-color);
+      }
+    }
+    &_complain {
+      display: flex;
+      align-items: center;
+      color: var(--text-dark-color);
+      cursor: pointer;
+      &:hover {
+        color: var(--text-color);
+      }
+      &_icon {
+        margin-right: 6px;
       }
     }
   }
@@ -91,6 +119,8 @@
   line-height: 1.6em;
   outline: none;
   padding: 0.4em 0;
+  font-size: 16px;
+  font-family: var(--font--family--serif) !important;
 }
 
 .list {
