--- a/components/FullPost/Post.module.scss
+++ b/components/FullPost/Post.module.scss
@@ -6,19 +6,19 @@
   margin-bottom: 200px;
   background-color: var(--primary-color);
   border-radius: 4px;
-  &_info {
+  &Info {
     display: flex;
     justify-content: space-between;
     margin-top: 18px;
   }
-  &_header {
+  &Header {
     margin: 0;
     margin-bottom: 25px;
     font-size: 42px;
     line-height: 44px;
     color: var(--text-color);
   }
-  &_share {
+  &Share {
     display: flex;
     align-items: center;
     margin-top: 20px;
@@ -28,10 +28,10 @@
     &:hover {
       color: var(--text-color);
     }
-    &_icon {
+    &Icon {
       margin-right: 6px;
     }
-    &_popup {
+    &Popup {
       background-color: var(--grey-light-color) !important;
       border-radius: 4px;
       margin-top: 10px;
@@ -46,7 +46,7 @@
         border-left: 7px solid transparent;
       }
     }
-    &_social {
+    &Social {
       display: flex;
       align-items: center;
       padding: 5px 20px;
@@ -71,28 +71,28 @@
         border-right: 7px solid transparent;
         border-left: 7px solid transparent;
       }
-      &_icon {
+      &Icon {
         width: 30px;
         margin-right: 10px;
         fill: var(--text-dark-color);
       }
     }
   }
-  &_footer {
+  &Footer {
     display: flex;
     margin-top: 30px;
-    &_icons {
+    &Icons {
       margin-right: 30px;
     }
-    &_icon {
+    &Icon {
       margin-right: 20px;
       cursor: pointer;
       fill: var(--text-dark-color);
-      &_hover {
+      &Hover {
         fill: var(--text-color);
       }
     }
-    &_complain {
+    &Complain {
       display: flex;
       align-items: center;
       color: var(--text-dark-color);
@@ -100,7 +100,7 @@
       &:hover {
         color: var(--text-color);
       }
-      &_icon {
+      &Icon {
         margin-right: 6px;
       }
     }
@@ -129,13 +129,14 @@
   outline: none;
   padding: 0.4em 0;
   padding-left: 40px;
-  &_item {
+  &Item {
     padding: 5px 0 5px 3px;
     line-height: 1.6em;
   }
 }
 
 .image {
+  position: relative;
   display: flex;
   min-height: 200px;
   max-height: 600px;
@@ -143,14 +144,14 @@
   border-radius: 4px;
   overflow: hidden;
   margin: 10px 0;
-  &_picture {
+  &Picture {
     width: 100%;
     display: none;
-    &_visible {
+    &Visible {
       display: block;
     }
   }
-  &_preloader {
+  &Preloader {
     display: none;
     width: 50px;
     height: 50px;
@@ -160,7 +161,7 @@
     position: relative;
     background-color: var(--secondary-color);
     background-position: center center;
-    &_visible {
+    &Visible {
       display: block;
     }
     &::after {
@@ -205,12 +206,12 @@
   background-color: var(--text-dark-color);
   height: 100px;
   border-radius: 4px;
-  &_title {
+  &Title {
     color: var(--primary-color);
     font-size: 20px;
     margin: 0;
   }
-  &_description {
+  &Description {
     color: var(--primary-color);
     font-size: 14px;
   }
