--- a/components/MiniPost/MiniPost.module.scss
+++ b/components/MiniPost/MiniPost.module.scss
@@ -24,7 +24,7 @@
 .post {
   width: 100%;
   max-width: 950px;
-  max-height: 600px;
+  //max-height: 600px;
   background-color: var(--primary-color);
   border-radius: 6px;
   padding: 30px;
