--- a/components/UserMiniCard/UserMiniCard.module.scss
+++ b/components/UserMiniCard/UserMiniCard.module.scss
@@ -1,6 +1,12 @@
+@import 'styles/media';
+
 .userCard {
   border-bottom: 1px solid var(--border-color);
   max-width: 1092px;
+
+  @include phone-m {
+    margin: 10px;
+  }
 
   &:last-child {
     border-bottom: none !important;
@@ -8,6 +14,10 @@
 
   &_profile {
     width: 670px;
+
+    @include phone-m {
+      width: 100% !important;
+    }
   }
 
   &_user {
@@ -75,6 +85,11 @@
   &_description {
     width: 475px;
     margin-left: 15px;
+
+    @include phone-m {
+      width: 100% !important;
+    }
+
 
     &_header {
       display: flex;
