--- a/components/ProfilePopup/ProfilePopup.module.scss
+++ b/components/ProfilePopup/ProfilePopup.module.scss
@@ -1,3 +1,8 @@
+
+.root {
+  width: 34px !important;
+  height: 34px !important;
+}
 .popover {
   .paper {
     background: var(--grey-light-color);
