--- a/components/AvailableForWork/AvailableForWork.module.scss
+++ b/components/AvailableForWork/AvailableForWork.module.scss
@@ -1,11 +1,14 @@
 .checkedTitle {
   padding-left: 10px;
   font-size: 14px;
+  font-family: Formular !important;
 }
 
 .uncheckedTitle {
   padding-right: 10px;
   font-size: 14px;
+  font-family: Formular !important;
+
 }
 
 .checked {
