--- a/components/ProfilePopup/ProfilePopup.module.scss
+++ b/components/ProfilePopup/ProfilePopup.module.scss
@@ -1,7 +1,7 @@
 
 .root {
-  width: 34px !important;
-  height: 34px !important;
+  //width: 34px !important;
+  //height: 34px !important;
 }
 .popover {
   .paper {
