--- a/components/UserCard/UserCard.module.scss
+++ b/components/UserCard/UserCard.module.scss
@@ -144,6 +144,15 @@
     color: #04C800;
   }
 
+  &_workNotAvailableStatus {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    line-height: 18px;
+    color: #c80000 !important;
+  }
+
+
   &_sts {
     width: 8px;
     height: 8px;
@@ -152,6 +161,16 @@
     margin-right: 5px;
     margin-left: 5px;
   }
+
+  &_sts_not_available {
+    width: 8px;
+    height: 8px;
+    background: #c80000;
+    border-radius: 20px;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
 
   &_section {
     display: flex;
