--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,8 +1,14 @@
+@import "styles/media";
+
 .header {
   background-color: #282832;
   padding: 20px 65px;
   height: 60px;
   position: relative;
+
+  @include phone-m {
+    padding: 20px 17px !important;
+  }
 
   .backdrop {
     z-index: 1;
