--- a/components/pages/SpecialistPage/SpecialistPage.module.scss
+++ b/components/pages/SpecialistPage/SpecialistPage.module.scss
@@ -2,3 +2,14 @@
   display: flex;
   justify-content: center;
 }
+
+.header {
+  span {
+    font-size: 16px;
+  }
+}
+
+.filters {
+  margin-top: 37px;
+  display: flex;
+}
