--- a/styles/app.scss
+++ b/styles/app.scss
@@ -190,3 +190,11 @@
 .m-0 {
   margin: 0px !important;
 }
+
+ul {
+  list-style: none !important;
+}
+
+[aria-labelledby="demo-simple-select-standard-label"] {
+  background-color: #282832 !important;
+}
