--- a/components/AuthDialog/AuthDialog.module.scss
+++ b/components/AuthDialog/AuthDialog.module.scss
@@ -15,11 +15,15 @@
   button {
     position: relative;
     border: 1px solid #474758 !important;
-    svg {
+    margin-bottom: 5px;
+    color: #D0D0DD !important;
+    font-size: 14px;
+    text-transform: unset !important;
+
+    img {
       position: absolute;
-      width: 24px !important;
       left: 0;
-      margin-left: 21px;
+      margin-left: 15px;
     }
   }
 }
