--- a/components/NotificationDropdown/NotificationDropdown.module.scss
+++ b/components/NotificationDropdown/NotificationDropdown.module.scss
@@ -40,58 +40,20 @@
   }
 
   li {
-    list-style-type: disc;
-    list-style-position: inside;
     padding-top: 15px;
 
     &:not(:last-child) {
       padding-bottom: 20px;
-      border-bottom: 1px solid #eeeeee;
-    }
-
-    &::marker {
-      margin: 0;
-      color: white;
-      font-size: 22px;
     }
   }
 
   .newItem {
-    &::marker {
-      margin: 0;
-      font-size: 22px;
-      color: #ff544a !important;
-    }
+
   }
 
   .listContent {
-    display: inline-grid;
-    grid-gap: 10px;
-    margin-left: -12px;
-    margin-top: -1px;
-
-    h4 {
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 18px;
-      letter-spacing: 0px;
-      margin: 0;
-    }
-
-    p {
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 17px;
-      letter-spacing: 0em;
-      margin: 0;
-    }
-
-    span {
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 14px;
-      letter-spacing: 0em;
-      opacity: 0.6;
+    a {
+      color: #04C800;
     }
   }
 }
@@ -135,6 +97,37 @@
 
     .MuiInput-root {
       width: 100% !important;
+    }
+  }
+}
+
+
+.item {
+  display: flex;
+  align-items: center;
+
+  h4 {
+    font-family: Formular !important;
+    font-size: 13px !important;
+  }
+
+  & > div:last-child {
+    margin-left: 15px;
+  }
+
+  .avatar {
+    width: 40px !important;
+    height: 40px !important;
+  }
+
+
+  .likeBlock {
+    position: relative;
+
+    img {
+      position: absolute;
+      right: 0;
+      bottom: 0;
     }
   }
 }
