--- a/components/InlineMenuMobile/InlineMenuMobile.module.css
+++ b/components/InlineMenuMobile/InlineMenuMobile.module.css
@@ -1,6 +1,6 @@
 .block {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin-bottom: 28px;
+    padding: 0 15px;
 }
