--- a/components/SideComments/SideComments.module.scss
+++ b/components/SideComments/SideComments.module.scss
@@ -2,7 +2,12 @@
 
 .comments {
   overflow: hidden;
-  border: 1px solid var(--border-color);
+  border-top: 1px;
+  border-left: 1px;
+  border-right: 1px;
+  border-bottom: 0;
+  border-style: solid;
+  border-color: var(--border-color);
   border-top-left-radius: 5px;
 
   @include phone-m {
@@ -11,10 +16,10 @@
 
   h5 {
     margin: 0;
-    font-size: 16px;
     text-transform: uppercase;
     font-size: 12px;
     line-height: 16px;
+    font-weight: normal;
     letter-spacing: 0.1em;
     color: var(--text-dark-color);
     padding: 30px;
@@ -24,10 +29,6 @@
 
 .comment {
   border-bottom: 1px solid var(--border-color);
-
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.03);
-  }
 }
 
 .commentRating {
@@ -42,6 +43,11 @@
 
 .commentText {
   font-size: 16px;
+  margin: 10px 0;
+}
+
+.commentText p{
+
 }
 
 .commentPostLink {
