--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -48,7 +48,7 @@ li {
 
 .left-side {
   width: 240px;
-  margin-left: 10%;
+  margin-left: 30px;
   &-no-margin {
     width: 240px;
     margin: 0;
